# AdaptiveRAG

./: .gitignore  Adaptive_RAG_Paper_Rewritten.docx  README.md  fix_paper_issues_1_7.py  fix_paper_round2.py  pyproject.toml  requirements.txt
configs/: local.yaml  openai.yaml
data/: queries.jsonl
data/corpus/v0/: policy_a.md  policy_b.md  policy_c.md
data/corpus/v1/: policy_a.md  policy_b.md  policy_c.md
data/manifests/: sha256sums.txt
paper_assets/: generate_figma_style_assets.py
runs/: README.md
scripts/: build_synthetic_data.py  reproduce.sh  sync_paper_results.py
src/adaptive_rag/: __init__.py  chunking.py  config.py  drift.py  embeddings.py  indexing_bm25.py  indexing_faiss.py  llm.py  manifest.py  metrics.py  run_experiment.py  stats.py  types.py
src/adaptive_rag/retrieval/: __init__.py  hybrid.py
