[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Local-first adaptive RAG evaluation harness (insurance policy drift experiment)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "faiss-cpu>=1.8.0",
  "rank-bm25>=0.2.2",
  "httpx>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
sentence_transformers = ["sentence-transformers>=2.2.0"]

[project.scripts]
adaptive-rag-run = "adaptive_rag.run_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]
